@@ -25,6 +25,7 @@ v3.4.6 to
 - Support random 2 type 84.
 - Fix complaints about both params of action D operator 80 being FF.
 - Support string codes 9A 06, 9A 07, and 9A 08.
+- (devel) Can no longer build without boost.
 
 v3.4.5 to v3.4.6 (r1795)
 - Data file updates:
